test/bad/variable_declaration_09.mpp
var foo[3]:MyType; % Use of undeclared type
